// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NDJSON > parse > parses valid NDJSON correctly 1`] = `
[
  {
    "hello": "world",
    "list": [
      1,
      2,
    ],
  },
  1,
  [
    1,
    2,
  ],
  "hello",
  "world",
]
`;

exports[`NDJSON > parse > safely ignores empty lines 1`] = `[]`;

exports[`NDJSON > parse > skips invalid lines of JSON when options.safe is true 1`] = `
[
  {
    "hello": "world",
    "list": [
      1,
      2,
    ],
  },
  "hello",
]
`;

exports[`NDJSON > parse > throws error when parsing invalid NDJSON 1`] = `"Unexpected end of JSON input"`;

exports[`NDJSON > stringify > stringifies a list of objects 1`] = `
"1
{\\"hello\\":\\"world\\"}
[1,2,3]
[1,{\\"hello\\":\\"world\\"}]
\\"hello\\"
\\"there\\""
`;
